# cc3k-remake

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: CMakeLists.txt  boundingrectangle.cpp  boundingrectangle.h  corridor.cpp  corridor.h  entity.cpp  entity.h  entityfactory.h  environment.h  game.cpp  game.h  goblin.cpp  goblin.h  main.cpp  map.cpp  map.h  player.cpp  player.h  point.cpp  point.h  renderer.cpp  renderer.h  room.cpp  room.h
src/entity/: CMakelists.txt  enemy.cpp  enemy.h  entity.cpp  entity.h  entityfactory.cpp  entityfactory.h  environment.cpp  environment.h  floor.cpp  floor.h  goblin.cpp  goblin.h  movement.cpp  movement.h  movingentity.cpp  movingentity.h  player.cpp  player.h  playermovement.cpp  playermovement.h  randommovement.cpp  randommovement.h  rat.cpp  rat.h
src/entity/movement/: CMakeLists.txt  followmovement.cpp  followmovement.h  movement.cpp  playermovement.cpp  playermovement.h  randommovement.cpp  randommovement.h
src/gameplay/: CMakeLists.txt  status.cpp  status.h
src/geometry/: CMakelists.txt  boundingrectangle.cpp  boundingrectangle.h  hitbox.cpp  hitbox.h  point.cpp  point.h  rectangle.cpp  rectangle.h  shape.h
src/graphics/: CMakeLists.txt  rectangularsprite.cpp  rectangularsprite.h  rgba.h  sprite.h  spritefactory.cpp  spritefactory.h
src/room/: CMakelists.txt  commonroom.cpp  commonroom.h  room.cpp  room.h  roomfactory.cpp  roomfactory.h  startingrom.cpp  startingroom.cpp  startingroom.h
src/utils/: CMakeLists.txt  random.cpp  random.h
tests/: CMakeLists.txt  boundingrectangle.t.cpp  rectangle.t.cpp
